[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/UniversalInventory/Editor/ItemEditor/ImagesContainer.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/UniversalInventory/Editor/ItemEditor/Item.gd" type="Script" id=2]
[ext_resource path="res://addons/UniversalInventory/Editor/ItemEditor/Variables/CustomVariables.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/UniversalInventory/Editor/ItemEditor/Variables/VariablesContainer.tscn" type="PackedScene" id=4]

[node name="Item" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
path_node_path = NodePath("MarginContainer/HBoxContainer/VBoxContainer/Path")
id_node_path = NodePath("MarginContainer/HBoxContainer/VBoxContainer/Id")
name_node_path = NodePath("MarginContainer/HBoxContainer/VBoxContainer/Data/HSplitContainer/LeftSide/Name/LineEdit")
description_node_path = NodePath("MarginContainer/HBoxContainer/VBoxContainer/Data/HSplitContainer/LeftSide/Description/TextEdit")
variables_nodes_path = NodePath("MarginContainer/HBoxContainer/VBoxContainer/Data/HSplitContainer/RightSide/VSplitContainer/Variables/VScrollBar/VariablesContainer")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="LeftPadding" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 5.0
margin_bottom = 600.0
rect_min_size = Vector2( 5, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 9.0
margin_right = 1015.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="TopPadding" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 1006.0
margin_bottom = 5.0
rect_min_size = Vector2( 0, 5 )

[node name="Title" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 9.0
margin_right = 1006.0
margin_bottom = 23.0
text = "Item Data"

[node name="Path" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 27.0
margin_right = 1006.0
margin_bottom = 41.0
text = "Test/Path"

[node name="Id" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 1006.0
margin_bottom = 59.0
text = "ID: 1"

[node name="Data" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 63.0
margin_right = 1006.0
margin_bottom = 567.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/Data"]
margin_right = 1006.0
margin_bottom = 504.0

[node name="LeftSide" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/Data/HSplitContainer"]
margin_right = 497.0
margin_bottom = 504.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/Data/HSplitContainer/LeftSide"]
margin_right = 497.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/Data/HSplitContainer/LeftSide/Name"]
margin_top = 5.0
margin_right = 130.0
margin_bottom = 19.0
rect_min_size = Vector2( 130, 0 )
text = "Name:"

[node name="LineEdit" type="LineEdit" parent="MarginContainer/HBoxContainer/VBoxContainer/Data/HSplitContainer/LeftSide/Name"]
margin_left = 134.0
margin_right = 274.0
margin_bottom = 24.0
rect_min_size = Vector2( 140, 0 )

[node name="Description" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/Data/HSplitContainer/LeftSide"]
margin_top = 28.0
margin_right = 497.0
margin_bottom = 128.0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/Data/HSplitContainer/LeftSide/Description"]
margin_top = 43.0
margin_right = 130.0
margin_bottom = 57.0
rect_min_size = Vector2( 130, 0 )
text = "Description: "

[node name="TextEdit" type="TextEdit" parent="MarginContainer/HBoxContainer/VBoxContainer/Data/HSplitContainer/LeftSide/Description"]
margin_left = 134.0
margin_right = 497.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
wrap_enabled = true

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/Data/HSplitContainer/LeftSide"]
margin_top = 132.0
margin_right = 497.0
margin_bottom = 163.0
text = "
Item Images:"

[node name="ImagesContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/Data/HSplitContainer/LeftSide" instance=ExtResource( 1 )]

[node name="RightSide" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/Data/HSplitContainer"]
margin_left = 509.0
margin_right = 1006.0
margin_bottom = 504.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplitContainer" type="VSplitContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/Data/HSplitContainer/RightSide"]
margin_right = 497.0
margin_bottom = 504.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Variables" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/Data/HSplitContainer/RightSide/VSplitContainer"]
margin_right = 497.0
margin_bottom = 246.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/Data/HSplitContainer/RightSide/VSplitContainer/Variables"]
margin_right = 497.0
margin_bottom = 31.0
text = "
Variables"

[node name="VScrollBar" type="ScrollContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/Data/HSplitContainer/RightSide/VSplitContainer/Variables"]
margin_top = 35.0
margin_right = 497.0
margin_bottom = 246.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VariablesContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/Data/HSplitContainer/RightSide/VSplitContainer/Variables/VScrollBar" instance=ExtResource( 4 )]
margin_right = 0.0
margin_bottom = 0.0

[node name="CustomVariables" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/Data/HSplitContainer/RightSide/VSplitContainer"]
margin_top = 258.0
margin_right = 497.0
margin_bottom = 504.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/Data/HSplitContainer/RightSide/VSplitContainer/CustomVariables"]
margin_right = 497.0
margin_bottom = 14.0
text = "Custom Variables:"

[node name="CustomVariables" parent="MarginContainer/HBoxContainer/VBoxContainer/Data/HSplitContainer/RightSide/VSplitContainer/CustomVariables" instance=ExtResource( 3 )]
margin_top = 18.0
margin_bottom = 246.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 571.0
margin_right = 1006.0
margin_bottom = 591.0
custom_constants/separation = 15
alignment = 2

[node name="DeleteButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 895.0
margin_right = 950.0
margin_bottom = 20.0
text = "Delete"

[node name="SaveButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 965.0
margin_right = 1006.0
margin_bottom = 20.0
text = "Save"

[node name="BottomPadding" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 595.0
margin_right = 1006.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 5 )

[node name="RightPadding" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 1019.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 5, 0 )

[connection signal="text_changed" from="MarginContainer/HBoxContainer/VBoxContainer/Data/HSplitContainer/LeftSide/Name/LineEdit" to="." method="change_data" binds= [ "name" ]]
[connection signal="text_changed" from="MarginContainer/HBoxContainer/VBoxContainer/Data/HSplitContainer/LeftSide/Description/TextEdit" to="." method="change_data" binds= [ "description" ]]
[connection signal="text_changed" from="MarginContainer/HBoxContainer/VBoxContainer/Data/HSplitContainer/LeftSide/Description/TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/DeleteButton" to="." method="delete_item"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/SaveButton" to="." method="save_data"]
